src/sections/featured.module.scss
.projectContainer {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
    grid-gap: 1.5rem;
    margin: 0;
}

.projectTag {
    box-sizing: border-box;
    position: absolute;
    bottom: 0;
    background-color: #777777;
    padding: 0 0 0 0.5rem;
    color: white;
    text-decoration: none;

    h3{
        margin: 0.5rem 0 0 0;
    }
    p {
        margin: 0 0 0.5rem 0;
        color: #dddddd;
    }
}

.featured {
    box-sizing: border-box;
    height: 250px;
    overflow: hidden;
    background-color: #f4f4f4;
    transition: transform .2s;
    position:relative;

    > div {
        width: 100%;
    }
}

.overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    width: 100%;
    opacity: 0;
    transition: .5s ease;
    background-color: #ffffff;
    pointer-events: none;
  }

.featured:hover {
    transform: scale(1.01);
}

.featured:hover .overlay {
    opacity: 0.2;
}


@media only screen and (max-width: 400px) {
    /* For mobile phones: */
    .projectContainer {
        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));

    }
}

